Fixed timeline issues on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -549,17 +549,28 @@ footer {
 /* Responsive Timeline */
 @media screen and (max-width: 640px) {
     .timeline {
+        --line-x: 3rem;
         display: block;
+        position: relative;
+    }
+
+    .timeline-middle { display: none; }
+
+    .timeline .job,
+    .timeline .timeline-left,
+    .timeline .timeline-right {
+        width: auto;
+        margin: 1rem calc(var(--line-x) + var(--timeline-spacing));
     }
 
     /* Center Line */
     .timeline::after {
-        left: 3rem;
+        left: var(--line-x);
     }
     /* End of Center Line */
 
     /* Timeline Point */
-    .job::before {
+    .timeline .job::before {
         left: calc(-1 * var(--timeline-spacing));
     }
     /* End of Timeline Point */
@@ -570,16 +581,15 @@ footer {
     }
 
     /* Timeline Triangles */
-    .timeline-left::after {
-        content: '';
-        position: absolute;
+    .timeline .timeline-left::after,
+    .timeline .timeline-right::after {
         left: 0;
         top: 50%;
         transform: translate(-100%, -50%);
         border-top: 2rem solid transparent;
         border-left: 2rem solid transparent;
         border-right: 2rem solid var(--secondary-background-color);
-        border-bottom: 2rem solid transparent;  
+        border-bottom: 2rem solid transparent;
     }
     /* End of Timeline Triangles */
 
